--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ title                    : "冯涯林(Yalin Feng)"
 title_separator          : "-"
 name                     : &name "Yalin Feng"
 description              : &description "personal description"
-url                      : https://ntufyl.github.io/PersonalHomePage.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://yalin-feng.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "ntufyl.github.io/PersonalHomePage.github.io"
+repository               : "yalin-feng.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -24,8 +24,8 @@ author:
   avatar           : "https://img.picui.cn/free/2024/06/02/665c242ad1e7b.jpg"
   name             : "Yalin Feng"
   pronouns         : # example: "she/her"  
-  bio              : "A master of Computer science by hobby"
-  location         : "Nanyang City, Henan Province, China"
+  bio              : "incoming CS MS@NTU"
+  location         : "China"
   employer         : "Nanyang Technological University"
   uri              : # URL
   email            : "FENG0173@e.ntu.edu.sg" 
@@ -36,7 +36,7 @@ author:
   impactstory      : # URL
   orcid            : "http://orcid.org/yourorcidurl"
   semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : # URL"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
 
   # Repositories and software development
@@ -48,7 +48,7 @@ author:
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : # URL"bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
